<resources>
    <string name="app_name">QiitaClient</string>
    <string name="app_name_debug">QiitaClientDev</string>
    <string name="please_input_search_tag">検索タグを入力して下さい。</string>
    <string name="search">検索する</string>
    <string name="cancel_ja">キャンセル</string>
    <string name="recent_article">最新の記事</string>
    <string name="new_articles">新着記事</string>
    <string name="search_articles">記事検索</string>
    <string name="bookmark_articles">保存した記事</string>
    <string name="comfirm_deleting_article_title">保存した記事の削除</string>
    <string name="confirm_deleting_article_text">本当に削除して良いですか？</string>
    <string name="positive_button">はい</string>
    <string name="negative_button">いいえ</string>
    <string name="delete_complete_button">削除完了</string>
    <string name="complete_delete_text">ブックマークを削除しました。</string>
    <string name="no_bookmark">現在、保存している記事はありません。</string>
    <string name="save_article_done">この記事を保存しました。</string>
    <string name="save_article_error">保存した記事の取得に失敗しました。</string>
    <string name="delete_bookmark_article_error">保存した記事の削除に失敗しました。</string>
    <string name="search_title">検索タグ：</string>
    <string name="search_article_error">記事の検索に失敗しました。</string>
    <string name="get_tags_error">タグの取得に失敗しました。</string>
    <string name="tag">タグ</string>
    <string name="my_post">自分の投稿</string>
    <string name="login">ログイン</string>
    <string name="search_tag">検索タグ</string>
    <string name="logout">ログアウト</string>
    <string name="no_my_posts">Qiitaへの自分の投稿はありません。</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
